cytoscape.io bundle is replaced by io-api and io-impl.
git-svn-id: http://chianti.ucsd.edu/svn@16084 0ecc0d97-ab19-0410-9704-bfe1a75892f5